# ecowatch_backend

./: .gitignore  Cargo.toml  README.md  example.env
.github/workflows/: build.yml
db/migrations/: 1_create.sql  2_latest_sensor.sql  3_fix_latest_sensor.sql  4_refix_latest_sensor.sql  5_checklist.sql  6_leftovers.sql
documents/: db.pu
er/: db.pu
src/: config.rs  database.rs  handlers.rs  main.rs  utils.rs
src/handlers/: classroom.rs  school.rs  student.rs
