[package]
name = "eco2class_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
sqlx = { version = "=0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }
dotenv = "0.15"
