[package]
name = "ecowatch_backend"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
dotenvy = "0.15"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"
ulid = "1.1.3"
cookie = { version = "0.18", features = ["percent-encode"] }
config = "0.14.0"
once_cell = "1.19.0"
chrono = "0.4.38"
